* Fix for host with IPv6 enable but without default IPv6 route
* Add desktop entry
* Add win32 single executable
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release